added more gadgets

--- a/index.html
+++ b/index.html
@@ -12,15 +12,39 @@
 </head>
 <body>
    <div class="container">
-    <div class="start">
+    <div class="content1">
         <div class="nav">
-            <ion-icon name="logo-microsoft"></ion-icon>
+        <ion-icon name="logo-microsoft"></ion-icon>
         <a href="#" id="log">Category</a>
         <a href="">Products</a>
         <a href="">Today's Deal</a>
         <a href="">About us</a>
         <a href="">Contact us</a>
         <button>SIGNUP</button>
-    </div>  
+    </div> 
+    <div class="search">
+        <ion-icon name="logo-microsoft"></ion-icon>
+        <h3>Category</h3> 
+        <ion-icon name="search-outline"></ion-icon>
+        <input type="text"name="search"placeholder="search....."/> 
+
+    </div>
+    </div> 
+    <div class="order">
+        <div class="cont1">
+            <h1>Your Trusted Gadgets <br> Devices Partner</h1>
+            <p>there are many variations of passages of lorem ipsum <br>
+            vailable ,but the majority have suffered alteration</p>
+            <button>Order Now</button>
+            <button>Explore More</button>
+
+        </div>
+        <div>
+            <img src="images/tv.png" alt="">
+        </div>
+
+    </div>
+</div>
+
 </body>
 </html>
