--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
     </div>
 
     </div>
+    <div id="products">
+
+    </div>
 
     <div class="controllers">
-        <div class="container">
+        <div class="contr1">
         <div class="heads">
            <h2>NEW 2023 <br> PRODUCTS!</h2>
            <ion-icon name="barcode-outline"></ion-icon><p>Lorem ipsum  <br>
@@ -100,14 +103,76 @@
         <p>Designed for competitive gaming with microswitch <br>buttons,analog triggers and 
             programmable macros </p>
         </div>
-        <div>
+        <div class="imgs">
             <img src="images/conrollers-removebg-preview.png" alt="">
         </div>
        
     </div>
 
     </div>
-</div>
+    <div class="testmonies">
+        <h1>Testimonials</h1>
+        <p>Lorem ipsum dolor, sit as laud</p>
+    </div>
+    <div class="sayings">
+        <div>
+            <p>Lorem, ipsum dolor sit amet consectetur<br> adipisicing elit.  velit veritatis. Saep<br>
+             velit ducimus reiciferendis!</p>
+             <br>
+             <h3>Cameron Williamson</h3>
+             <p>Project head of Turbo Electrolight</p>
+             <hr>
 
+        </div>
+        <div>
+            <img src="images/human6.jpg" alt="">
+        </div>
+    </div>
+    <div class="subscribe">
+    <div>
+        <h2>Subscribe newslatter</h2> 
+    </div>
+        <div class="inputs">
+        <button>Enter Email</button>
+    
+    </div>
+</div>
+    <div  class="footer">
+        <div>
+            <h3 class="smart">Smart <span class="spans">Gadgets</span></h3>
+            <p>6391 Elgin St.Celina, Delaware <br> 10299</p>
+        </div>
+        <div>
+            <p>Corporate Sales</p>
+            <p>Feedback</p>
+            <p>Jobs</p>
+            <p>Uptades</p>
+            <p>Purchase Rules</p>
+            <p>For Parterns</p>
+        </div>
+        <div>
+            <p>Bonus program</p>
+            <p>Smart Gadget</p>
+            <p>Bill Payment Verification</p>
+            <p>Offers</p>
+            <p>Delivery</p>
+            <p>Our location</p>
+        </div>
+        <div>
+            <p>How to place an order</p>
+            <p>Ways of payment</p>
+            <p>Exchange and return of goods</p>
+            <p>Warranty service</p>
+            <p>Order Tracking</p>
+            <p>Before you buy</p>
+        </div>
+        <div>
+            <p>2030 Company. All Right Reserved</p>
+            <p>Privacy Privacy</p>
+            <p>Terms & condition</p>
+        </div>
+        </div>
+</div>
+<script src="index.js"></script>
 </body>
 </html>
